--- a/com.packtpub.felix.bookshelf-service/pom.xml
+++ b/com.packtpub.felix.bookshelf-service/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.packtpub.felix</groupId>
 	<artifactId>com.packtpub.felix.bookshelf-service</artifactId>
-	<version>1.7.0</version>
+	<version>1.8.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Bookshelf Service</name>
@@ -19,6 +19,11 @@
 			<groupId>com.packtpub.felix</groupId>
 			<artifactId>com.packtpub.felix.bookshelf-inventory-api</artifactId>
 			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.packtpub.felix</groupId>
+			<artifactId>com.packtpub.felix.bookshelf-log-api</artifactId>
+			<version>1.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
