--- a/com.packtpub.felix.bookshelf-servlet/pom.xml
+++ b/com.packtpub.felix.bookshelf-servlet/pom.xml
@@ -3,18 +3,29 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.packtpub.felix</groupId>
-	<artifactId>com.packtpub.felix.bookshelf-service</artifactId>
-	<version>1.9.0</version>
+	<artifactId>com.packtpub.felix.bookshelf-servlet</artifactId>
+	<version>1.11.0</version>
 	<packaging>bundle</packaging>
 
-	<name>Bookshelf Service</name>
-	<description>Bookshelf Service interfaces</description>
+	<name>Bookshelf Servlet</name>
+	<description>Bookshelf Servlet bundle</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.packtpub.felix</groupId>
+			<artifactId>com.packtpub.felix.bookshelf-service</artifactId>
+			<version>1.5.0</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.packtpub.felix</groupId>
 			<artifactId>com.packtpub.felix.bookshelf-inventory-api</artifactId>
@@ -38,17 +49,13 @@
 					<instructions>
 						<Bundle-Category>sample</Bundle-Category>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>
-							com.packtpub.felix.bookshelf.service.api,
-							com.packtpub.felix.bookshelf.service.impl
-						</Export-Package>
-						<!-- <Bundle-Activator>com.packtpub.felix.bookshelf.service.impl.activator.BookshelfServiceImplActivator</Bundle-Activator>
-						<Private-Package>com.packtpub.felix.bookshelf.service.impl.activator</Private-Package> -->
+						<Export-Package>com.packtpub.felix.bookshelf.servlet</Export-Package>
 					</instructions>
 					<remoteOBR>repo-rel</remoteOBR>
 					<prefixUrl>
 						file:///E:/osgiboxes/felix/releases
 					</prefixUrl>
+					<ignoreLock>true</ignoreLock>
 				</configuration>
 			</plugin>
 			<plugin>
