--- a/com.packtpub.felix.bookshelf-log-api/pom.xml
+++ b/com.packtpub.felix.bookshelf-log-api/pom.xml
@@ -3,47 +3,27 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.packtpub.felix</groupId>
-	<artifactId>com.packtpub.felix.bookshelf-service-tui</artifactId>
+	<artifactId>com.packtpub.felix.bookshelf-log-api</artifactId>
 	<version>1.10.0</version>
-	<packaging>bundle</packaging>
 
-	<name>Bookshelf Service TUI</name>
-	<description>Bookshelf Service TUI bundle</description>
+  <name>Bookshelf Log Helper API</name>
+  <description>Bookshelf Log Helper API bundle</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.packtpub.felix</groupId>
-			<artifactId>com.packtpub.felix.bookshelf-service</artifactId>
-			<version>1.10.0</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.packtpub.felix</groupId>
-			<artifactId>com.packtpub.felix.bookshelf-inventory-api</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
-			<version>6.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.gogo.runtime</artifactId>
-			<version>1.0.10</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.ipojo.annotations</artifactId>
-			<version>1.12.1</version>
-		</dependency>
-	</dependencies>
-	<build>
+  <dependencies>
+  	<!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.core -->
+	<dependency>
+		<groupId>org.osgi</groupId>
+		<artifactId>org.osgi.core</artifactId>
+		<version>6.0.0</version>
+		<scope>provided</scope>
+	</dependency>
+  </dependencies>
+  
+  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -54,7 +34,7 @@
 					<instructions>
 						<Bundle-Category>sample</Bundle-Category>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>com.packtpub.felix.bookshelf.service.tui</Export-Package>
+						<Export-Package>com.packtpub.felix.bookshelf.log.api</Export-Package>
 					</instructions>
 					<remoteOBR>repo-rel</remoteOBR>
 					<prefixUrl>
@@ -63,7 +43,7 @@
 					<ignoreLock>true</ignoreLock>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-ipojo-plugin</artifactId>
 				<version>1.12.1</version>
@@ -77,7 +57,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<inherited>true</inherited>
@@ -96,4 +76,5 @@
 			<url>file:///E:/osgiboxes/felix/releases</url>
 		</repository>
 	</distributionManagement>
+	<packaging>bundle</packaging>
 </project>
