--- a/com.packtpub.felix.bookshelf-service/pom.xml
+++ b/com.packtpub.felix.bookshelf-service/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.packtpub.felix</groupId>
 	<artifactId>com.packtpub.felix.bookshelf-service</artifactId>
-	<version>1.9.0</version>
+	<version>1.10.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Bookshelf Service</name>
@@ -19,6 +19,11 @@
 			<groupId>com.packtpub.felix</groupId>
 			<artifactId>com.packtpub.felix.bookshelf-inventory-api</artifactId>
 			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.packtpub.felix</groupId>
+			<artifactId>com.packtpub.felix.bookshelf-log-api</artifactId>
+			<version>1.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
@@ -42,8 +47,8 @@
 							com.packtpub.felix.bookshelf.service.api,
 							com.packtpub.felix.bookshelf.service.impl
 						</Export-Package>
-						<!-- <Bundle-Activator>com.packtpub.felix.bookshelf.service.impl.activator.BookshelfServiceImplActivator</Bundle-Activator>
-						<Private-Package>com.packtpub.felix.bookshelf.service.impl.activator</Private-Package> -->
+						<!-- <Bundle-Activator>com.packtpub.felix.bookshelf.service.impl.activator.BookshelfServiceImplActivator</Bundle-Activator> 
+							<Private-Package>com.packtpub.felix.bookshelf.service.impl.activator</Private-Package> -->
 					</instructions>
 					<remoteOBR>repo-rel</remoteOBR>
 					<prefixUrl>
@@ -54,7 +59,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-ipojo-plugin</artifactId>
-				<version>1.8.0</version>
+				<version>1.12.1</version>
 				<executions>
 					<execution>
 						<goals>
